use first swu-cli generated module (not working yet)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
     "compilerOptions": {
+        "module": "esnext",
         "sourceMap": true,
-        "target": "es6",
+        "target": "esnext",
         "allowJs": true,
-        "moduleResolution": "node"
+        "moduleResolution": "bundler"
     },
     "include": [
-        "src/frontend/*"
+        "src/frontend/**/*"
     ]
 }
