--- a/package.json
+++ b/package.json
@@ -20,19 +20,22 @@
   },
   "homepage": "https://github.com/superjojo140/livetime#readme",
   "dependencies": {
-    "@types/bootstrap": "^5.0.8",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.0.0-beta2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "swu-core": "^1.0.0",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.0.8",
+    "css-loader": "^7.1.2",
     "dotenv-webpack": "^6.0.2",
     "nodemon": "^3.1.9",
+    "style-loader": "^4.0.0",
     "ts-loader": "^8.0.17",
-    "typescript": "^4.2.2",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0"
   }
