--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/superjojo140/livetime#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.0.0-beta2",
     "dotenv": "^8.2.0",
