--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/bootstrap": "^5.0.8",
     "css-loader": "^7.1.2",
     "dotenv-webpack": "^6.0.2",
+    "html-webpack-plugin": "^5.6.3",
     "nodemon": "^3.1.9",
     "style-loader": "^4.0.0",
     "ts-loader": "^8.0.17",
