--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
     "body-parser": "^1.19.0",
-    "bootstrap": "^5.0.0-beta2",
+    "bootstrap": "^5.3.7",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.14.3",
     "swu-core": "^1.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.0.8",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "css-loader": "^7.1.2",
     "dotenv-webpack": "^6.0.2",
     "html-webpack-plugin": "^5.6.3",
