--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
         "moduleResolution": "bundler"
     },
     "include": [
-        "src/frontend/**/*"
+        "src/frontend/**/*",
     ]
 }
